--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
-    <link rel="stylesheet" href="/Projects/Digital_Clock/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="clock">
@@ -13,6 +13,6 @@
         <span id="timeformat"></span>
     </div>
 
-    <script src="/Projects/Digital_Clock/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
